--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,9 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <spring-boot.version>2.6.0</spring-boot.version> <!-- Add this line -->
+       <sonar.projectKey>your-project-key</sonar.projectKey>
+       <sonar.host.url>http://your-sonarqube-server</sonar.host.url>
+       <sonar.login>your-sonarqube-token</sonar.login>
     </properties>
 
     <dependencies>
@@ -33,13 +36,23 @@
             <version>${spring-boot.version}</version> <!-- Add this line -->
         </dependency>
     </dependencies>
+       <distributionManagement>
+    <repository>
+        <id>nexus</id>
+        <url>http://nexus.yourdomain.com/repository/maven-releases/</url>
+    </repository>
+    <snapshotRepository>
+        <id>nexus-snapshots</id>
+        <url>http://nexus.yourdomain.com/repository/maven-snapshots/</url>
+    </snapshotRepository>
+</distributionManagement>
 
     <build>
     <plugins>
         <plugin>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-maven-plugin</artifactId>
-            <version>${spring-boot.version}</version>
+            <groupId>org.sonarsource.scanner.maven</groupId>        
+            <artifactId>sonar-maven-plugin</artifactId>
+            <version>3.7.0.1746</version>
             <executions>
                 <execution>
                     <goals>
@@ -54,4 +67,3 @@
     </plugins>
 </build>
 
-</project>
