--- a/pom.xml
+++ b/pom.xml
@@ -1,69 +1,59 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.springframework</groupId>
-    <artifactId>jb-hello-world-maven</artifactId>
-    <version>0.1.0</version>
-    <packaging>jar</packaging>
 
+    <groupId>org.springframework</groupId>
+    <artifactId>JSB-PROJECT</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
     <properties>
-        <java.version>1.8</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <spring-boot.version>2.6.0</spring-boot.version> <!-- Add this line -->
-       <sonar.projectKey>your-project-key</sonar.projectKey>
-       <sonar.host.url>http://your-sonarqube-server</sonar.host.url>
-       <sonar.login>your-sonarqube-token</sonar.login>
+        <sonar.host.url>http://100.25.220.128:9000</sonar.host.url>
+        <sonar.login>437ce097a020ff2be03797cfca6f399b2a883409</sonar.login>
+        <spring-boot.version>2.7.12</spring-boot.version>
     </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring-boot.version}</version>
+                <configuration>
+                    <mainClass>hello.HelloWorldApplication</mainClass> <!-- Specify your main class here -->
+                    <layout>JAR</layout>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>${spring-boot.version}</version> <!-- Add this line -->
-        </dependency>
-        <dependency>
-            <groupId>joda-time</groupId>
-            <artifactId>joda-time</artifactId>
-            <version>2.2</version>
+            <version>${spring-boot.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <version>${spring-boot.version}</version>
             <scope>test</scope>
-            <version>${spring-boot.version}</version> <!-- Add this line -->
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.10.10</version>
+        </dependency>
+        <!-- Add other dependencies as needed -->
     </dependencies>
-       <distributionManagement>
-    <repository>
-        <id>nexus</id>
-        <url>http://nexus.yourdomain.com/repository/maven-releases/</url>
-    </repository>
-    <snapshotRepository>
-        <id>nexus-snapshots</id>
-        <url>http://nexus.yourdomain.com/repository/maven-snapshots/</url>
-    </snapshotRepository>
-</distributionManagement>
 
-    <build>
-    <plugins>
-        <plugin>
-            <groupId>org.sonarsource.scanner.maven</groupId>        
-            <artifactId>sonar-maven-plugin</artifactId>
-            <version>3.7.0.1746</version>
-            <executions>
-                <execution>
-                    <goals>
-                        <goal>repackage</goal>
-                    </goals>
-                    <configuration>
-                        <mainClass>hello.HelloWorldApplication</mainClass>
-                    </configuration>
-                </execution>
-            </executions>
-        </plugin>
-    </plugins>
-</build>
-
+</project>
