--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: my-app
-        image: your-docker-image:tag
+        image: jsbimg:latest
         ports:
-        - containerPort: 8080
+        - containerPort: 9090
 
