--- a/service.yaml
+++ b/service.yaml
@@ -1,4 +1,3 @@
-# service.yaml
 apiVersion: v1
 kind: Service
 metadata:
@@ -10,5 +9,4 @@ spec:
   - protocol: TCP
     port: 80
     targetPort: 9090
-  type: LoadBalancer
-
+  type: NodePort
